# nlp-benchmark-taxonomy

./: .gitignore  README.md  pyproject.toml  requirements-train.txt  requirements.txt
config/: base.yaml  scibert.yaml  sweep.yaml  sweep_scibert.yaml
notebooks/: 2_labelling.ipynb  3_taxonomy.ipynb
scripts/: infer.sh  sweep.sh  test.sh  train.sh
src/: logging_config.py
src/data/: clean_anthology.py  datasets.py  enrich_anthology.py  fetch_acl_anthology.py
src/labelling/: llm_labeller.py  regex_buckets.Py
src/models/: base.py  classifier.py  scibert.py
src/training/: infer.py  trainer.py
