[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["logging_config"]

[project]
name = "nlp-benchmark-taxonomy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "acl-anthology>=1.0.0",
    "anthropic>=0.84.0",
    "datasets>=4.6.1",
    "google-genai>=1.66.0",
    "huggingface-hub>=1.5.0",
    "instructor>=1.14.5",
    "mistralai==1.12.4",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "wandb>=0.25.0",
]
